--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <!--NAVBAR SECTION-->
-    <nav class="navbar navbar-expand-lg bg-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark py-3 position-sticky top-0 nav-div">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">MAYOR's</a>
         <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,16 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav m-auto">
             <li class="nav-item">
-              <a data-link="section1" class="nav-link  active text-warning" aria-current="page" href="#">HOME</a>
+              <a data-link="section1" class="nav-link  active text-warning" aria-current="page" href="https://king-mayor.github.io/portfolio-home/">HOME</a>
             </li>
             <li class="nav-item">
-              <a data-link="section2" class="nav-link  text-warning" href="#">CONTACT</a>
+              <a data-link="section2" class="nav-link  text-warning" href="https://king-mayor.github.io/portfolio-contact/">CONTACT</a>
             </li>
             <li class="nav-item">
-              <a data-link="section3" class="nav-link  text-warning" href="#">PROJECTS</a>
-            </li>
-            <li class="nav-item">
-              <a data-link="section4" class="nav-link  text-warning" href="#">TESTIMONIALS</a>
+              <a data-link="section3" class="nav-link  text-warning" href="https://king-mayor.github.io/portfolio-projects/">PROJECTS</a>
             </li>
           </ul>
         </div>
@@ -39,7 +37,7 @@
     <section class="bg-dark p-5 text-light">
     <div class="container">
       <div class="row align-items-center justify-content-around show-reverse">
-        <div class="col">
+        <div class="col" data-aos="fade-up">
          <h2 class="text-warning ex-text">Mayor Odegbaro!</h2>
          <p class="py-3">
            I'm a front-end developer who enjoys bringing ideas 
@@ -51,7 +49,7 @@
           <button type="button" class="btn btn-primary">Reach me!</button>
          </a>
         </div>
-        <div class="col">
+        <div class="col" data-aos="fade-up">
           <img class="img-fluid w-50 d-none d-md-block" src="IMAGES/pexels-mati-mango-6330644.jpg" alt="illustrations">
         </div>
       </div>
@@ -59,7 +57,7 @@
     </section>
     <div class="container p-5">
       <div class="row g-5 text-center">
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
           <div class="card bg-dark text-light shadow">
             <div class="h1">
               <i class="bi bi-laptop"></i>
@@ -67,11 +65,10 @@
           <div class="card-body">
             <h5 class="card-title text-primary">Responsiveness</h5>
             <p class="card-text">Websites built are responsive across all screens and devices.</p>
-            <a href="mailto:mayorodegbaro@gmail.com" class="btn btn-primary">Reach me</a>
           </div>
         </div>
       </div>
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
            <div class="card bg-dark text-light shadow">
           <div class="h1">
             <i class="bi bi-brightness-alt-high"></i>
@@ -79,12 +76,11 @@
           <div class="card-body">
             <h5 class="card-title text-primary">Design</h5>
             <p class="card-text">I ensure my designs are neat and satisfies the clients/users.</p>
-            <a href="mailto:mayorodegbaro@gmail.com" class="btn btn-primary">Reach me</a>
           </div>
         </div>
 
         </div>
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
           <div class="card bg-dark text-light shadow">
             <div class="h1">
               <i class="bi bi-bag-check"></i>
@@ -92,7 +88,6 @@
             <div class="card-body">
               <h5 class="card-title text-primary">Competitive</h5>
               <p class="card-text">Websites are made unique using modern technologies.</p>
-              <a href="mailto:mayorodegbaro@gmail.com" class="btn btn-primary">Reach me</a>
             </div>
           </div>
         </div>
@@ -101,10 +96,10 @@
      <section class="bg-dark text-light">
        <div class="container">
          <div class="row align-items-center justify-content-around py-5 show-reverse">
-           <div class="col-12 col-md-6">
+           <div class="col-12 col-md-6" data-aos="fade-up">
              <img class="img-fluid w-50" src="IMAGES/pexels-mati-mango-5952738.jpg" alt="illustration">
            </div>
-           <div class="col-12 col-md-6">
+           <div class="col-12 col-md-6" data-aos="fade-up">
              <h2 class="text-warning">Get in touch</h2>
              <p class="py-3">
                Seeking to work with a highly committed, deligent and reliable front-end developer,
@@ -124,7 +119,7 @@
            <h2>FREQUENTLY ASKED QUESTIONS</h2>
          </div>
          <!--Accordion starts here-->
-         <div class="accordion accordion-flush text-center" id="accordionFlushExample">
+         <div class="accordion accordion-flush text-center" id="accordionFlushExample" data-aos="fade-up">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -166,29 +161,29 @@
        </div>
      </section>
      <section class="bg-light">
-     <div class="container py-5">
+     <div class="container py-5"  data-aos="fade-up">
        <div class="text-center py-3">
          <h1 class="ex-text">My skills</h1>
        </div>
        <div class="row text-center justify-content-between align-items-center g-2">
          <div class="col-12 col-md-6 col-lg-4">
-          <div class="card bg-secondary text-light shadow">
-            <div class="card-body">
+          <div class="card bg-white text-dark shadow">
+            <div class="card-body box-2">
               <h5 class="card-title">HTML</h5>
             </div>
           </div>
          </div>
          <div class="col-12 col-md-6 col-lg-4">
-          <div class="card bg-secondary text-light shadow">
-            <div class="card-body">
+          <div class="card bg-white text-dark shadow">
+            <div class="card-body box-2">
               <h5 class="card-title">CSS</h5>
             </div>
           </div>
          </div>
          <div class="col-12 col-md-6 col-lg-4">
-          <div class="card bg-secondary text-light shadow">
-            <div class="card-body">
-              <h5 class="card-title">JAVASCRIPT</h5>
+          <div class="card bg-white text-dark shadow">
+            <div class="card-body box-2">
+              <h5 class="card-title">TAILWIND</h5>
             </div>
           </div>
          </div>
@@ -199,23 +194,23 @@
        <div class="container">
         <div class="row text-center justify-content-between align-items-center g-2">
           <div class="col-12 col-md-6 col-lg-4">
-           <div class="card bg-secondary text-light shadow">
-             <div class="card-body">
+           <div class="card bg-white text-dark shadow">
+             <div class="card-body box-2">
                <h5 class="card-title">BOOTSTRAP</h5>
              </div>
            </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-           <div class="card bg-secondary text-light shadow">
-             <div class="card-body">
-               <h5 class="card-title">GIT/GITHUB</h5>
+           <div class="card bg-white text-dark shadow">
+             <div class="card-body box-2">
+               <h5 class="card-title">REACT</h5>
              </div>
            </div>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
-           <div class="card bg-secondary text-light shadow">
-             <div class="card-body">
-               <h5 class="card-title">SASS</h5>
+           <div class="card bg-white text-dark shadow">
+             <div class="card-body box-2">
+               <h5 class="card-title">JAVASCRIPT</h5>
              </div>
            </div>
           </div>
@@ -224,12 +219,12 @@
      </section>
      <!--Experience-->
        <section class="bg-light text-dark">
-         <div class="container">
+         <div class="container" data-aos="fade-up">
            <div class="text-center">
              <h1 class="pt-2 ex-text">EXPERIENCE</h1>
              <p class="ex-text pb-3">
                My design quality, flexibilty, documentation and websites' browser compatibilty 
-               are absolutely impressive.  I have roughly a year experience working with HTML, CSS & JAVASCRIPT.
+               are absolutely impressive.  I have roughly over 2 years experience working with HTML, CSS & JAVASCRIPT.
                 Having acquired and sharpened my front-end skills, I am trustworthy, creative and an effective communicator. 
                 I fondly anticipate working in a challenging, yet rewarding organization to attain
                  its vision for personal growth and development.
@@ -244,27 +239,24 @@
              <div class="h5"> MAYOR's</div>
            </div>
            <div class="footer2">
-             <a href="#">
-              <div class="h6 footer-links"><a href="#">Home</a></div>
+             <a href="https://king-mayor.github.io/portfolio-home/">
+              <div class="h6 footer-links"><a href="https://king-mayor.github.io/portfolio-home/">Home</a></div>
              </a>
-            <a href="#">
-              <div class="h6 footer-links"><a href="#">About</a></div>
+            <a href="https://king-mayor.github.io/portfolio-contact/">
+              <div class="h6 footer-links"><a href="https://king-mayor.github.io/portfolio-contact/">Contact</a></div>
             </a>
-             <a href="#">
-              <div class="h6 footer-links"><a href="#">Projects</a></div>
-             </a>
-             <a href="#">
-              <div class="h6 footer-links"><a href="#">Testimonials</a></div>
+             <a href="https://king-mayor.github.io/portfolio-projects/">
+              <div class="h6 footer-links"><a href="https://king-mayor.github.io/portfolio-projects/">Projects</a></div>
              </a>
            </div>
            <div class="footer3 d-flex text-md-center">
-             <a href="#">
+             <a href="https://github.com/king-mayor/">
               <div class="h2 px-2 text-secondary"><i class="bi bi-github"></i></div>
              </a>
-             <a href="#">
+             <a href="https://wa.me/+2349091780993">
               <div class="h2 px-2 text-secondary"><i class="bi bi-whatsapp"></i></div>
              </a>
-             <a href="#">
+             <a href="mailto:mayorodegbaro@gmail.com">
               <div class="h2 px-2 text-secondary"><i class="bi bi-envelope"></i></div>
              </a>
            </div>
@@ -276,5 +268,9 @@
       </section>
       <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
   </body>
 </html> 
